# uv-dependency-groups-pep-735-vs-poetry

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/groupcompare/: __init__.py  ci_workflows.py  core.py  lock_compare.py  migrate.py  pep735_layout.py  poetry_layout.py
tests/: test_ci_workflows.py  test_lock_compare.py  test_migrate.py  test_pep735_layout.py  test_poetry_layout.py  test_scaffold.py
